# mobarter-app

./: .commitlintrc.json  .gitignore  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
backend/: .gitignore  Cargo.toml
backend/.shuttle/: config.toml
backend/migrations/: 0001_kena.sql
backend/src/: app_state.rs  ctx.rs  main.rs  routes.rs
backend/src/controllers/: auth.rs  mod.rs
backend/src/controllers/airtime/: approve.rs  credit.rs  history.rs  mod.rs  nin.rs
backend/src/controllers/auth/: login.rs  logout.rs  mod.rs  send_otp.rs  verify_otp.rs
backend/src/controllers/bank_accounts/: add.rs  get.rs  mod.rs
backend/src/controllers/exchange/: mod.rs  partner_rates.rs  rates.rs
backend/src/controllers/kyc/: bvn.rs  phone.rs  status.rs
backend/src/controllers/orders/: all.rs  approve.rs  buy.rs  close.rs  mod.rs  sell.rs
backend/src/controllers/prices/: all.rs  buy.rs  mod.rs
backend/src/controllers/prices/comapanies/: bitmama.rs  mod.rs
backend/src/controllers/user/: get_info.rs  mod.rs
backend/src/error/: mod.rs
backend/src/model/: mod.rs
backend/src/web/: mod.rs  mw_auth.rs  routes_login.rs  tickets.rs
backend/test/: quick_dev.rs
backend/xop/: 0002_enums.sqlp  0003_tables.sqlp  embed.go
client/: .gitignore  capacitor.config.ts  codegen.ts  codegen.yml  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
go-back/: .gitignore  Dockerfile  Makefile  app.env  compose.yaml  fly.toml  go.mod  go.sum  main.go  main.txx  sqlc.yaml  todo.md  video.txt
prezenti/: readme.md
server/: Cargo.toml
(+440 files in other folders)
