[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.3"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies = "0.10.0"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
anyhow="1.0.90"

[dev-dependencies]
anyhow="1.0.90"
httpc-test = "0.1.1"